# pycaendaq

./: .gitignore  README.md  app.py  daq_scope.py  demo_dpppha_l1000.py  demo_scope_l1000.py  gui_interface.py  pyproject.toml
configs/: config_dpp_lyno.yaml  config_dpppha.yaml  config_lyno_test.yaml  config_scope.yaml
device_trees/: device_tree_dpppha.json  device_tree_scope.json
notebooks/: demo_dpppha.ipynb  demo_dpppha_l1000.ipynb  demo_scope.ipynb  demo_scope_l1000.ipynb
src/pycaendaq/: app.py  daq_dpppha.py  daq_scope.py
src/pyolafdaq/: __init__.py  daq_scope.py
src/pyolafdaq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: index.html
