# pyproject.toml

# This file is part of the modern Python packaging standard (PEP 518 and PEP 621).
# It defines build system requirements and project metadata.

[build-system]
# Specifies the backend used to build the package.
# setuptools is a common choice for many Python projects.
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycaendaq"
version = "0.1.0"
description = "A Python library for Data Acquisition (DAQ) systems, including digitizer control and a web interface."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }

authors = [
    { name = "Valerio D'Andrea", email = "valerio.dandrea@lngs.infn.it" },
]

keywords = ["CAEN", "DAQ", "Data Acquisition", "Python", "scientific", "instrumentation", "web", "flask"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research", # More specific audience
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics", # Example topic
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application", # For Flask app
]

urls = {"Homepage" = "https://github.com/valerioda/pycaendaq", "Repository" = "https://github.com/valerioda/pycaendaq", "Bug Tracker" = "https://github.com/valerioda/pycaendaq/issues"}


dependencies = [
    "numpy",
    "matplotlib",
    "pyyaml",
    "legend-pydataobj",
    "caen-felib",
    "Flask",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8",
    "black",
    "isort",
    "build",
    "twine",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
]

[project.scripts]
daq-scope = "pycaendaq.daq_scope:main"
daq-dpppha = "pycaendaq.daq_dpppha:daq_dpp"
daq-web-app = "pycaendaq.app:run_app"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pycaendaq"]

[tool.setuptools.package-data]
"pycaendaq" = [
    "data/*.json",
    "templates/*.html",
    "static/*", 
]

# You can also define other tools' configurations here, e.g., pytest, black, isort.
# [tool.pytest.ini_options]
# addopts = "--strict-markers --strict-data-files"
# testpaths = ["tests"]

# [tool.black]
# line-length = 88
# target-version = ["py38"]

# [tool.isort]
# profile = "black"
# line_length = 88

